32.0.2 (11-11-2020)
- Bug fix: Fix the unnecessary PersistentGroup creation

32.0.1 (10-11-2020)
- Refactor: Add methods to ensure API retro-compability

32.0.0 (10-11-2020)
- Refactor: Cleanup deprecated execution course slots
- Refactor: Cleanup deprecated execution course methods
- Refactor: Cleanup deprecated forum

31.0.0 (05-11-2020)
- Improvement: Show area slot of party contact in create/edit screens
- Refactor: Cleanup deprecated shift types
- Refactor: Cleanup deprecated curricular course slots
- Refactor: Remove deprecated method in school class 

30.12.0 (27-10-2020)
- Improvement: Delete degree message more explicit when blocker are curricular plans 
- Improvement: Add method WeekDay.getDayOfWeek()
- Refactor: Cleanup SchoolClass slot names in portuguese 
- Refactor: Cleanup Shift slot names in portuguese
- Refactor: Cleanup Lesson slot names in portuguese
- Fix: Shift custom name predicate when course sigla has square brackets

30.11.1 (20-10-2020)
- Fix: Changed Person related entities to allow delete method execution

30.11.0 (14-10-2020)
- New Feature: Added Health Card Number to Person according

30.10.0 (13-10-2020)
- Fix: Root curricular period label displaying 'null' on child order
- Refactor: Remove teacher authorization departments to units migration on system init
- Refactor: Migrate SchoolClass slot names in portuguese to english
- Refactor: Migrate Shift slot names in portuguese to english
- Refactor: Migrate Lesson slot names in portuguese to english

30.9.4 (31-08-2020)
- Fix: Coordinator curricular year statistics should use execution year on computation

30.9.3 (14-08-2020)
- Improvement: Child execution interval should be created with the default state (not open)
- Improvement: Mark lesson instance as online

30.9.2 (11-08-2020)
- Refactor: Allow CreditsLimit rule subclassing

30.9.1 (07-08-2020)
- Fix: Unique acronym check should ignore blank values
- Fix: Add official unit setter with primitive boolean param

30.9.0 (06-08-2020)