@@ -1539,7 +1539,7 @@ public class StudentCurricularPlan extends StudentCurricularPlan_Base {
 
     private void correctInvalidAttends(final StudentCurricularPlan to) {
         for (final Attends attend : getRegistration().getAssociatedAttendsSet()) {
-            if (!attend.hasExecutionCourseTo(this) && attend.canMove(this, to)) {
+            if (!attend.hasExecutionCourseTo(this.getDegreeCurricularPlan()) && attend.canMove(this, to)) {
                 getRegistration().changeShifts(attend, to.getRegistration());
                 attend.setRegistration(to.getRegistration());
             }
