@@ -1221,28 +1221,6 @@ public class Registration extends Registration_Base {
         }
     }
 
-    @Atomic
-    final public void removeAttendFor(final ExecutionCourse executionCourse) {
-        final Attends attend = readRegistrationAttendByExecutionCourse(executionCourse);
-        if (attend != null) {
-            checkIfHasEnrolmentFor(attend);
-            checkIfHasShiftsFor(executionCourse);
-            attend.delete();
-        }
-    }
-
-    public void checkIfHasEnrolmentFor(final Attends attend) {
-        if (attend.getEnrolment() != null) {
-            throw new DomainException("errors.student.already.enroled");
-        }
-    }
-
-    public void checkIfHasShiftsFor(final ExecutionCourse executionCourse) {
-        if (!getShiftsFor(executionCourse).isEmpty()) {
-            throw new DomainException("errors.student.already.enroled.in.shift");
-        }
-    }
-
     @Override
     final public Integer getNumber() {
         return super.getNumber() != null ? super.getNumber() : getStudent().getNumber();
@@ -1383,12 +1361,14 @@ public class Registration extends Registration_Base {
         final User user = Authenticate.getUser();
         Set<AcademicProgram> programsManageRegistration = AcademicAccessRule
                 .getProgramsAccessibleToFunction(AcademicOperationType.MANAGE_REGISTRATIONS, user).collect(Collectors.toSet());
-        programsManageRegistration.addAll(PermissionService.getObjects("ACADEMIC_OFFICE_REGISTRATION_ACCESS", Degree.class ,user));
+        programsManageRegistration
+                .addAll(PermissionService.getObjects("ACADEMIC_OFFICE_REGISTRATION_ACCESS", Degree.class, user));
 
         Set<AcademicProgram> programsViewFullStudentCurriculum =
                 AcademicAccessRule.getProgramsAccessibleToFunction(AcademicOperationType.VIEW_FULL_STUDENT_CURRICULUM, user)
                         .collect(Collectors.toSet());
-        programsViewFullStudentCurriculum.addAll(PermissionService.getObjects("ACADEMIC_OFFICE_REGISTRATION_ACCESS", Degree.class ,user));
+        programsViewFullStudentCurriculum
+                .addAll(PermissionService.getObjects("ACADEMIC_OFFICE_REGISTRATION_ACCESS", Degree.class, user));
 
         return programsManageRegistration.stream().anyMatch(ap -> ap == degree)
                 || programsViewFullStudentCurriculum.stream().anyMatch(ap -> ap == degree);
